styles.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap&family=Roboto+Slab:wght@300;400;500;700&display=swap");


* {
    box-sizing: border-box;
}


body {
    font-family: "Montserrat", sans-serif;
    background-image: linear-gradient(to bottom right,rgba(154, 147, 16, 0.573), rgba(34, 44, 1, 0.852));
    /* we need height for align items to work*/
    overflow: hidden;
}

main {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 0;
    overflow: hidden;
    height: 100vh;
    backdrop-filter: blur(10px);
}

h1 {
    font-family: "roboto slab",serif;
    color:#fbff00;
    font-size: 2.5rem;
}

.container {
    display: flex;
    width: 90vw;
    height: 80vh;
}

.panel {
    background-size: cover 1000px;
    background-position: center;
    background-repeat: no-repeat;
    height: 60vh;
    border-radius: 50px;
    flex: 0.5;
    margin: 10px;
    position: relative;
    transition: flex 0.8s ease-in-out;
    cursor: pointer;
}

.panel.active {
    flex: 7;
    box-shadow: 5px 5px 15px 5px #464629
}

.panel h3 {
    color: #fbff00;
    background-color: rgba(30, 30, 30, 0.403);
    border-radius: 10px;
    font-size: 1.8rem;
    position: absolute;
    bottom: 20px;
    left: 20px;
    margin: 0;
    opacity: 0;
    text-align: center;
    padding: 0.3rem 0.5rem;
    
}

.panel.active h3 {
    opacity: 1;
    transition: opacity 1s;
    transition-delay: 0.5s;

}

.panel p {
    color: rgb(255, 255, 255);
    position: absolute;
    left: 20px;
    top: 97%;
    font-size: 1.6rem;
    opacity: 0;
}

.panel.active p {
    opacity: 100;
    transition: opacity 3s;
    transition-delay: 0.5s;
}

.navigate-box {
    display: none;
}


@media (max-width: 568px) and (min-width: 100px) {
   h1 {
    margin-top: 0;
    font-size: 1rem;
    text-align: center;
   }
   
    .container {
        width: 100vw;
        height: 90vh;
    }

    .panel {
        display: none;
        border-radius: 8px;
        height: 35vh;
        background-size:contain;
    }


    .panel h3 {
        text-align: center;
        border-radius: 5px;
        padding: 0 0 0 0;
        left: 10px;
        bottom: 0;
        color: rgb(0, 255, 229);
        
        font-size: 1rem;
    }
    
    .panel.active p {
        font-size: 1rem;
        color: red;
        left: 10px;
    }

    
    .panel.active {
        display: block;
    }
    .hidden {
        display: none;
    }

    .navigate-box {
        display: flex;
        flex-direction: row;
        justify-content: center;
        gap: 15px;
        position: absolute;
        bottom: 30px;
    }

    .navigate-btn {
        width: 80px;
        height: 30px;
        font-weight: 400px;
        /* position: absolute; */
    }

    .disabled {
        pointer-events: none;
        opacity: 0.3;  
    }




}

